# decentralized-summarizer

./: README.md  pyproject.toml
decentralized_summarizer/: __init__.py  main.py  prompts.py
