[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized-summarizer"
version = "2025.12.21120929"
description = "A new package that processes user input to generate structured summaries of decentralized protocol concepts, such as Polyproto, by extracting key features and benefits. It uses pattern matching to ens"
readme = "README.md"
authors = [{ name = "decentralized-summarizer", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/decentralized-summarizer"
